--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-ng-app="kulygin">
 
 <head>
 
@@ -8,13 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <script src='angular.min.js'></script>
 
-  <title>Bare - Start Bootstrap Template</title>
+  <title>Kulygin</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <!-- jQuery Version 1.11.1 -->
+  <script src="js/jquery.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
 
+  <script src='angular.min.js'></script>
+  <script src='angular-route.min.js'></script>
+
+  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript" src="js/SimpleController.js"></script>
   <!-- Custom CSS -->
   <style>
     body {
@@ -31,7 +39,6 @@
     <![endif]-->
 
 </head>
-
 <body>
 
   <!-- Navigation -->
@@ -45,20 +52,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Kulygin</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Services</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -68,28 +69,11 @@
 
   <!-- Page Content -->
   <div class="container">
-
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1>A Bootstrap Starter Template</h1>
-        <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
-        <ul class="list-unstyled">
-          <li>Bootstrap v3.3.1</li>
-          <li>jQuery v1.11.1</li>
-        </ul>
-      </div>
+    <div class="view" ng-view>
+      Augnablik...
     </div>
-    <!-- /.row -->
-
   </div>
   <!-- /.container -->
 
-  <!-- jQuery Version 1.11.1 -->
-  <script src="js/jquery.js"></script>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
