--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <script src='angular-route.min.js'></script>
 
   <script type="text/javascript" src="/js/app.js"></script>
-  <script type="text/javascript" src="js/SimpleController.js"></script>
+  <script type="text/javascript" src="/js/SimpleController.js"></script>
+  <script type="text/javascript" src="/js/AboutController.js"></script>
   <!-- Custom CSS -->
   <style>
     body {
@@ -52,12 +53,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Kulygin</a>
+        <a class="navbar-brand" href="/#/frontpage">Kulygin</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">About</a></li>
+          <li><a href="/#/about">About</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
