--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/SimpleController.js"></script>
   <script type="text/javascript" src="/js/AboutController.js"></script>
+  <script type="text/javascript" src="/js/ContactController.js"></script>
+  <script type="text/javascript" src="/js/ServicesController.js"></script>
   <!-- Custom CSS -->
   <style>
     body {
@@ -57,10 +59,11 @@
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <img src="img/snakes.jpg" alt="medicineSnake" style="float:right; width:50px; height:40px; margin-top:5px;">
         <ul class="nav navbar-nav">
-          <li><a href="/#/about">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#/about">About</a></li>
+          <li><a href="#/services">Services</a></li>
+          <li><a href="#/contact">Contact</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
