--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 
   <script src='angular.min.js'></script>
   <script src='angular-route.min.js'></script>
+  <script src='http://requirejs.org/docs/release/2.1.11/minified/require.js'></script>
 
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/SimpleController.js"></script>
   <script type="text/javascript" src="/js/AboutController.js"></script>
   <script type="text/javascript" src="/js/ContactController.js"></script>
   <script type="text/javascript" src="/js/ServicesController.js"></script>
+
   <!-- Custom CSS -->
   <style>
     body {
@@ -61,9 +63,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <img src="img/snakes.jpg" alt="medicineSnake" style="float:right; width:50px; height:40px; margin-top:5px;">
         <ul class="nav navbar-nav">
-          <li><a href="#/about">About</a></li>
-          <li><a href="#/services">Services</a></li>
-          <li><a href="#/contact">Contact</a></li>
+          <li><a href="#/about">Um Kulygin</a></li>
+          <li><a href="#/services">Þjónustur</a></li>
+          <li><a href="#/contact">Hafðu samband</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
