--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <script type="text/javascript" src="/js/SimpleController.js"></script>
   <script type="text/javascript" src="/js/AboutController.js"></script>
   <script type="text/javascript" src="/js/ContactController.js"></script>
-  <script type="text/javascript" src="/js/ServicesController.js"></script>
+  <script type="text/javascript" src="/js/VidburdarstjornunController.js"></script>
+  <script type="text/javascript" src="/js/ReynslaController.js"></script>
+  <script type="text/javascript" src="/js/RadgjafarverkefniController.js"></script>
 
   <!-- Custom CSS -->
   <style>
@@ -61,10 +63,22 @@
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <img src="img/snakes.jpg" alt="medicineSnake" style="float:right; width:50px; height:40px; margin-top:5px;">
         <ul class="nav navbar-nav">
           <li><a href="#/about">Um Kulygin</a></li>
-          <li><a href="#/services">Þjónustur</a></li>
+          <li class='dropdown'>
+            <a href="#/radgjafarverkefni" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ráðgjafarverkefni <span class="caret"></span></a>
+            <ul class='dropdown-menu'>
+              <li><a href='#'>Heilbrigðismál</a></li>
+              <li><a href='#'>Samstarfsaðilar</a></li>
+              <li><a href='#'>Stefnumótun</a></li>
+              <li><a href='#'>Ferðaþjónusta</a></li>
+              <li><a href='#'>Opinber Stjórnsýsla</a></li>
+              <li><a href='#'>Sveitarstjórnarmál</a></li>
+              <li><a href='#'>Klasastjórnun</a></li>
+            </ul>
+          </li>
+          <li><a href="#/vidburdarstjornun">Viðburðarstjórnun</a></li>
+          <li><a href="#/reynsla">Reynsla</a></li>
           <li><a href="#/contact">Hafðu samband</a></li>
         </ul>
       </div>
