--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul class="nav navbar-nav">
           <li><a href="#/about">Um Kulygin</a></li>
           <li class='dropdown'>
-            <a href="#/radgjafarverkefni" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ráðgjafarverkefni <span class="caret"></span></a>
+            <a href="#" onclick='return false;' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ráðgjafarverkefni <span class="caret"></span></a>
             <ul class='dropdown-menu'>
               <li><a href='#'>Heilbrigðismál</a></li>
               <li><a href='#'>Samstarfsaðilar</a></li>
@@ -77,8 +77,24 @@
               <li><a href='#'>Klasastjórnun</a></li>
             </ul>
           </li>
-          <li><a href="#/vidburdarstjornun">Viðburðarstjórnun</a></li>
-          <li><a href="#/reynsla">Reynsla</a></li>
+          <li class='dropdown'>
+            <a href="#" onclick='return false;' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Viðburðarstjórnun <span class="caret"></span></a>
+            <ul class='dropdown-menu'>
+              <li><a href='#'>Verkstýring lítilla hóp</a></li>
+              <li><a href='#'>Skipulagning og stýring stærri viðburða</a></li>
+              <li><a href='#'>Veislustjórnun</a></li>
+            </ul>
+          </li>
+          <li class='dropdown'>
+            <a href="#" onclick='return false;' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reynsla <span class="caret"></span></a>
+            <ul class='dropdown-menu'>
+              <li><a href='#'>Stjórnarsetur</a></li>
+              <li><a href='#'>Stjórnunarreynsla</a></li>
+              <li><a href='#'>Félagsmál</a></li>
+              <li><a href='#'>Leiklist</a></li>
+              <li><a href='#'>Íþróttir</a></li>
+            </ul>
+          </li>
           <li><a href="#/contact">Hafðu samband</a></li>
         </ul>
       </div>
